# Grokking_goldilocks

./: .gitignore  README.md  pyproject.toml  train_grokking.py
configs/: train_configs.yaml
src/: __init__.py  __main__.py  data.py  model.py  plotting.py  probes.py  runtime.py  train.py
